--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     {% for post in Posts %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.author.username }}</p>
+        <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a>
+        <p id="{{ post.author.pk }}">{{ post.author.username }}</p>
         <p>{{ post.body }}</p>
     {% endfor %}
 </body>
